mockbin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mockbin-v2
  labels:
    app: mockbin-v2
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    appProtocol: http
  selector:
    app: mockbin-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockbin-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockbin-v2
  template:
    metadata:
      labels:
        app: mockbin-v2
    spec:
      containers:
      - image: kong/blog:mockbin-traffic-mirror-v2
        name: mockbin
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mockbin
  labels:
    app: mockbin
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    appProtocol: http
  selector:
    app: mockbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockbin
  template:
    metadata:
      labels:
        app: mockbin
    spec:
      containers:
      - image: kong/blog:mockbin-traffic-mirror
        name: mockbin
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mockbin-dot-mesh
  annotations:
    konghq.com/host-header: "mockbin.myblog.svc.3000.mesh"
spec:
  type: ExternalName
  externalName: mockbin.myblog.svc.3000.mesh
